loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: not found: value sortie
sortie=false
^Poucet1:3: error: not found: value sortie
while (sortie==false){
       ^Poucet1:19: error: not found: value sortie
  sortie=sortieTrouvee()
  ^