loopdowhile.Poucet1.scala.code
sortie=false

while (sortie==false){
  var biscuit=0
  var couloir=0

  for (couloir<-0 to 4){
    if (estSurBiscuit()){
      biscuit=biscuit+1
    }
    avance()
  }

  if (biscuit<=2){
    droite()
  }else{
    gauche()
  }
  sortie=sortieTrouvee()
}